--- a/.vim/plugin-manager/dein/config/dein_lazy.toml
+++ b/.vim/plugin-manager/dein/config/dein_lazy.toml
@@ -53,6 +53,6 @@ repo = 'vim-airline/vim-airline-themes'
 
 ##### davidhalter/jedi-vim #####
 
-[[plugins]]
-repo = 'davidhalter/jedi-vim'
-on_ft = ['python']
+# [[plugins]]
+# repo = 'davidhalter/jedi-vim'
+# on_ft = ['python']
