modify sonictemplate's config and add template of pandoc

--- a/.vim/plugin-manager/dein/config/dein.toml
+++ b/.vim/plugin-manager/dein/config/dein.toml
@@ -48,6 +48,11 @@ repo = 'dhruvasagar/vim-table-mode'
 
 [[plugins]]
 repo = 'mattn/sonictemplate-vim'
+hook_add = '''
+    let g:sonictemplate_vim_template_dir = [
+	\ '$HOME/.vim/template'
+	\]
+'''
 
 [[plugins]]
 repo = 'simeji/winresizer'
