--- a/.vim/plugin-manager/dein/config/dein.toml
+++ b/.vim/plugin-manager/dein/config/dein.toml
@@ -1,5 +1,9 @@
+##### dein #####
+
 [[plugins]]
 repo = 'Shougo/dein.vim'
+
+##### nerdtree #####
 
 [[plugins]]
 repo = 'scrooloose/nerdtree'
@@ -7,12 +11,16 @@ hook_add = '''
     autocmd bufenter * if (winnr("$") == 1 && exists("b:NERDTree") && b:NERDTree.isTabTree()) | q | endif
 '''
 
+##### vimfiler #####
+
 [[plugins]]
 repo = 'Shougo/vimfiler'
 depends = ['unite.vim']
 hook_source = '''
     let g:vimfiler_as_default_explorer = 1
 '''
+
+##### vimfiler #####
 
 [[plugins]]
 repo = 'vim-airline/vim-airline'
@@ -22,11 +30,12 @@ hook_add = '''
 '''
 depends = ['vim-airline-themes']
 
-# [[plugins]]
-# repo = 'MetalPhaeton/easybracket-vim'
+##### lexima #####
 
 [[plugins]]
 repo = 'cohama/lexima.vim'
+
+##### QiitaPy #####
 
 [[plugins]]
 repo = 'Kenta11/QiitaPy'
@@ -34,17 +43,25 @@ hook_add = '''
     autocmd bufenter * if (winnr("$") == 1 && exists("b:QiitaPy")) | q | endif
 '''
 
+##### indentLine #####
+
 [[plugins]]
 repo = 'Yggdroot/indentLine'
 hook_add = '''
     let g:indentLine_char = '¦'
 '''
 
+##### Quickrun #####
+
 [[plugins]]
 repo = 'thinca/vim-quickrun'
 
+##### vim-table-mode #####
+
 [[plugins]]
 repo = 'dhruvasagar/vim-table-mode'
+
+##### sonictemplate #####
 
 [[plugins]]
 repo = 'mattn/sonictemplate-vim'
@@ -54,10 +71,15 @@ hook_add = '''
 	\]
 '''
 
+##### winresizer #####
+
 [[plugins]]
 repo = 'simeji/winresizer'
 hook_add = '''
     let g:winresizer_vert_resize = 1
     let g:winresizer_horiz_resize = 1
 '''
+##### vim-toml #####
 
+[[plugins]]
+repo = 'cespare/vim-toml'
