--- a/.vim/plugin-manager/dein/config/dein.toml
+++ b/.vim/plugin-manager/dein/config/dein.toml
@@ -20,7 +20,7 @@ hook_source = '''
     let g:vimfiler_as_default_explorer = 1
 '''
 
-##### vimfiler #####
+##### vim-airline #####
 
 [[plugins]]
 repo = 'vim-airline/vim-airline'
@@ -29,6 +29,9 @@ hook_add = '''
     let g:airline#extensions#tabline#enabled = 1
 '''
 depends = ['vim-airline-themes']
+
+# [[plugins]]
+# repo = 'vim-airline/vim-airline-themes'
 
 ##### lexima #####
 
@@ -43,18 +46,18 @@ hook_add = '''
     autocmd bufenter * if (winnr("$") == 1 && exists("b:QiitaPy")) | q | endif
 '''
 
-##### indentLine #####
-
-[[plugins]]
-repo = 'Yggdroot/indentLine'
-hook_add = '''
-    let g:indentLine_char = '¦'
-'''
-
-##### Quickrun #####
-
-[[plugins]]
-repo = 'thinca/vim-quickrun'
+# ##### indentLine #####
+# 
+# [[plugins]]
+# repo = 'Yggdroot/indentLine'
+# hook_add = '''
+#     let g:indentLine_char = '¦'
+# '''
+# 
+# ##### Quickrun #####
+# 
+# [[plugins]]
+# repo = 'thinca/vim-quickrun'
 
 ##### vim-table-mode #####
 
