--- a/.gitconfig
+++ b/.gitconfig
@@ -4,4 +4,4 @@
 [core]
 	editor = vim
 [alias]
-    tree = log --graph --all --oneline
+    tree = log --oneline --graph --all --pretty=format:'%h [%cd] %d %s <%an>' --date=format:'%Y/%m/%d %H:%M:%S'
