Fix ignoring vim/plugin-manager/dein/config/*

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-vim/plugin-manager/dein
+/vim/plugin-manager/dein/*
 !vim/plugin-manager/dein/config
 !vim/plugin-manager/dein/repos/github.com/Shougo/dein.vim
 vim/.netrwhist
