--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "vim/plugin-manager/dein/repos/github.com/Shougo/dein.vim"]
-	path = vim/plugin-manager/dein/repos/github.com/Shougo/dein.vim
+[submodule "vim/plugin-manager/dein/dein.vim"]
+	path = vim/plugin-manager/dein/dein.vim
 	url = https://github.com/Shougo/dein.vim
