--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,5 @@
 /vim/.netrwhist
+/vim/plugin-manager/dein/cache_vim
+/vim/plugin-manager/dein/state_vim.vim
 /vim/plugin-manager/dein/repos
+/vim/plugin-manager/dein/.cache
