--- a/vim/plugin-manager/dein/config/dein_lazy.toml
+++ b/vim/plugin-manager/dein/config/dein_lazy.toml
@@ -13,12 +13,6 @@ hook_post_source = '''
 depends = ['nvim-yarp', 'vim-hug-neovim-rpc']
 
 [[plugins]]
-repo = 'roxma/nvim-yarp'
-
-[[plugins]]
-repo = 'roxma/vim-hug-neovim-rpc'
-
-[[plugins]]
 repo = 'Shougo/neosnippet.vim'
 on_event = 'InsertEnter'
 hook_source = '''
@@ -30,6 +24,21 @@ hook_source = '''
     endif
 '''
 depends = ['neosnippet-snippets', 'context_filetype.vim']
+
+### deoplete.nvim & defx.nvim ###
+
+[[plugins]]
+repo = 'roxma/nvim-yarp'
+
+[[plugins]]
+repo = 'roxma/vim-hug-neovim-rpc'
+
+### vim-airline ###
+
+[[plugins]]
+repo = 'vim-airline/vim-airline-themes'
+
+### neosnippet ###
 
 [[plugins]]
 repo = 'Shougo/neosnippet-snippets'
