--- a/vim/plugin-manager/dein/config/dein_lazy.toml
+++ b/vim/plugin-manager/dein/config/dein_lazy.toml
@@ -1,39 +1,44 @@
-# [[plugins]]
-# repo = 'Shougo/deoplete.nvim'
-# on_event = 'InsertEnter'
-# hook_source = '''
-#     let g:deoplete#enable_at_startup = 1
-#     let g:deoplete#auto_complete_delay = 0
-# '''
-# hook_post_source = '''
-#     inoremap <expr><tab> pumvisible() ? "\<C-n>" :
-#     \ neosnippet#expandable_or_jumpable() ?
-#     \    "\<Plug>(neosnippet_expand_or_jump)" : "\<tab>"
-# '''
-# depends = ['nvim-yarp', 'vim-hug-neovim-rpc']
-# 
-# [[plugins]]
-# repo = 'Shougo/neosnippet.vim'
-# on_event = 'InsertEnter'
-# hook_source = '''
-#     imap <C-k> <Plug>(neosnippet_expand_or_jump)
-#     smap <C-k> <Plug>(neosnippet_expand_or_jump)
-#     xmap <C-k> <Plug>(neosnippet_expand_target)
-#     if has('conceal')
-#         set conceallevel=2 concealcursor=niv
-#     endif
-# '''
-# depends = ['neosnippet-snippets', 'context_filetype.vim']
-# 
-# ### neosnippet ###
-# [[plugins]]
-# repo = 'Shougo/neosnippet-snippets'
-# 
-# [[plugins]]
-# repo = 'Shougo/context_filetype.vim'
-
-### deoplete.nvim & defx.nvim ###
+### defx.nvim & deoplete.nvim ###
 [[plugins]]
 repo = 'roxma/nvim-yarp'
 [[plugins]]
 repo = 'roxma/vim-hug-neovim-rpc'
+######
+
+### defx.nvim ###
+[[plugins]]
+repo = 'kristijanhusak/defx-icons'
+######
+
+### neosnippet ###
+[[plugins]]
+repo = 'Shougo/neosnippet-snippets'
+
+[[plugins]]
+repo = 'Shougo/context_filetype.vim'
+
+### vim-airline ###
+[[plugins]]
+repo = 'vim-airline/vim-airline-themes'
+[[plugins]]
+repo = 'ryanoasis/vim-devicons'
+hook_source = '''
+    let g:airline_powerline_fonts = 1
+'''
+######
+
+### vim-lsp ###
+[[plugins]]
+repo = 'mattn/vim-lsp-settings'
+[[plugins]]
+repo = 'prabirshrestha/async.vim'
+[[plugins]]
+repo = 'prabirshrestha/asyncomplete.vim'
+hook_source = '''
+    inoremap <expr> <Tab>   pumvisible() ? "\<C-n>" : "\<Tab>"
+    inoremap <expr> <S-Tab> pumvisible() ? "\<C-p>" : "\<S-Tab>"
+    inoremap <expr> <cr>    pumvisible() ? "\<C-y>" : "\<cr>"
+'''
+[[plugins]]
+repo = 'prabirshrestha/asyncomplete-lsp.vim'
+######
