--- a/vim/dein.toml
+++ b/vim/dein.toml
@@ -2,12 +2,19 @@
 repo = 'Shougo/defx.nvim'
 depends = ['nvim-yarp', 'vim-hug-neovim-rpc', 'defx-icons']
 hook_add = '''
-    call defx#custom#option('_', { 'columns': 'indent:git:icons:filename', 'show_ignored_files': 1 })
+    call defx#custom#option('_', {
+    \   'winwidth': 20,
+    \   'split': 'vertical',
+    \   'toggle': 1,
+    \   'resume': 1,
+    \   'columns': 'indent:git:icons:filename',
+    \   'show_ignored_files': 1,
+    \})
 
     autocmd FileType defx call s:defx_my_settings()
     function! s:defx_my_settings() abort
         " Define mappings
-        nnoremap <silent><buffer><expr> <CR>    defx#do_action('open')
+        nnoremap <silent><buffer><expr> <CR>    defx#do_action('drop')
         nnoremap <silent><buffer><expr> c       defx#do_action('copy')
         nnoremap <silent><buffer><expr> m       defx#do_action('move')
         nnoremap <silent><buffer><expr> p       defx#do_action('paste')
@@ -38,12 +45,24 @@ hook_add = '''
         nnoremap <silent><buffer><expr> <C-g>   defx#do_action('print')
         nnoremap <silent><buffer><expr> cd      defx#do_action('change_vim_cwd')
     endfunction
-    nnoremap <silent> <C-f> :<C-u>Defx -split=vertical -winwidth=20<CR>
+
+    nnoremap <silent> <C-f> :<C-u>Defx<CR>
+    autocmd VimEnter * execute 'Defx' | if argc() != 0 | wincmd w | endif
+
+    function! s:previewWindowOpened() abort
+        for nr in range(1, winnr('$'))
+            if getwinvar(nr, "&pvw") == 1
+                return 1
+            endif
+        endfor
+        return 0
+    endfunction
+    autocmd WinEnter \[defx\]* if winnr('$') == 1 || winnr('$') == 2 && <SID>previewWindowOpened() | quit | endif
 '''
 
 [[plugins]]
 repo = 'Shougo/ddc.vim'
-depends = ['denops.vim']
+depends = ['denops.vim', 'ddc-around', 'ddc-matcher_head', 'ddc-sorter_rank']
 hook_add = '''
     " Customize global settings
     " Use around source.
@@ -142,6 +161,9 @@ repo = 'junegunn/fzf.vim'
 
 [[plugins]]
 repo = 'previm/previm'
+hook_add = '''
+    let g:previm_open_cmd = 'google-chrome-stable'
+'''
 
 [[plugins]]
 repo = 'mattn/vim-maketable'
